--- a/power-control-system/Makefile
+++ b/power-control-system/Makefile
@@ -3,4 +3,5 @@ all:
 	cogent pwr.cogent -g --dist-dir=generated --root-dir=../cogent -A  --entry-funcs=entrypoints.cfg --fake-header-dir=../cogent/cogent/lib --funused-dargent-accessors
 
 clean:
-	rm generated/*
+	rm -rf generated/*
+	rm -f umm_types.txt
